--- a/translation_5.4.3.1/other/opt/var/local/mesquite/shared/locales/en-GB/odac_error.html
+++ b/translation_5.4.3.1/other/opt/var/local/mesquite/shared/locales/en-GB/odac_error.html
@@ -18,7 +18,7 @@
     <h1>Nelze načíst</h1>                                                                                          
     <p>Klikněte prosím na Konec a zkuste se zaregistrovat znovu až budete mít spolehlivé připojení k Internetu. Zaregistrovat Kindle můžete později výběrem položky Nastavení z menu a kliknutím na volbu Registrace.</p>
     <div id="buttonArea" class="dialog">                                                                              
-        <input type="button" class="exitButton" value="Konec" onclick="kindle.appmgr.start('com.lab126.booklet.home');">
+        <input type="button" class="exitButton" value="Koniec" onclick="kindle.appmgr.start('com.lab126.booklet.home');">
     </div>                                                                                                            
 </body>                                                                                                               
 </html>   
