--- a/translation_5.4.3.1/other/opt/var/local/mesquite/shared/locales/en-GB/default_error.html
+++ b/translation_5.4.3.1/other/opt/var/local/mesquite/shared/locales/en-GB/default_error.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/default_error.css" />
 </head>
 <body>
-    <h1>Při načítání této stránky nastal problém.</h1>
-    <p>Klikněte na tlačítko Zpět a zkuste načíst stránku znovu.</p>
+    <h1>Nastal problém pri načítaní tejto stránky.</h1>
+    <p>Kliknite na tlačidlo Späť a skúste stránku načítať znovu.</p>
 </body>
 </html>
