--- a/translation_5.4.3.1/other/opt/var/local/mesquite/shared/locales/en-GB/odac_error.html
+++ b/translation_5.4.3.1/other/opt/var/local/mesquite/shared/locales/en-GB/odac_error.html
@@ -15,8 +15,8 @@
     </style>                                                                                                          
 </head>                                                                          
 <body>                                                                                                                
-    <h1>Nelze načíst</h1>                                                                                          
-    <p>Klikněte prosím na Konec a zkuste se zaregistrovat znovu až budete mít spolehlivé připojení k Internetu. Zaregistrovat Kindle můžete později výběrem položky Nastavení z menu a kliknutím na volbu Registrace.</p>
+    <h1>Nie je možné načítať</h1>                                                                                          
+    <p>Kliknite prosím na Koniec a skúste sa znovu zaregistrovať až budete mať spoľahlivé pripojenie k internetu. Kindle môžte zaregistrovať neskôr výberom položky z menu Nastavenie a kliknutím na voľbu Registrácia.</p>
     <div id="buttonArea" class="dialog">                                                                              
         <input type="button" class="exitButton" value="Koniec" onclick="kindle.appmgr.start('com.lab126.booklet.home');">
     </div>                                                                                                            
