--- a/translation_5.4.3.1/other/opt/var/local/mesquite/shared/locales/en-GB/prime_error.html
+++ b/translation_5.4.3.1/other/opt/var/local/mesquite/shared/locales/en-GB/prime_error.html
@@ -16,7 +16,7 @@
 </head>                                                                          
 <body>                                                                                                                
     <h1>Nie je možné načítať</h1>                                                                                          
-    <p>Webovú stránku Prime sa nepodarilo načítať. Pre pokračovanie prosím kliknite na tlačidlo OK.</p>
+    <p>Webovú stránku Prime sa nepodarilo načítať. Pre pokračovanie kliknite prosím na tlačidlo OK.</p>
     <div id="buttonArea" class="dialog">                                                                              
         <input type="button" class="exitButton" value="OK" onclick="kindle.appmgr.start('com.lab126.booklet.oobe.tutorial');">
     </div>                                                                                                            
